[package]
name = "ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
ctrlc = "3.4.4"
dns-lookup = "2.0.4"
hex = "0.4.3"
int-enum = "1.1.1"
libc = "0.2.153"

[target.'cfg(windows)'.dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Networking_WinSock",
    "Win32_System_IO",
    "Win32_System_Diagnostics_Debug",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Threading",
    "Win32_Security",
]
