[package]
name = "xping"
version = "0.1.0"
edition = "2021"
license = "MIT"
default-run = "xping"
description = "Command line ping, re-imagined."
authors = ["Lars Christensen <larsch@belunktum.dk>"]
exclude = ["target/release/update-readme.exe"]
homepage = "https://github.com/larsch/xping"
repository = "https://github.com/larsch/xping"
publish = false

[[bin]]
name = "xping"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.86", optional = true }
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
ctrlc = "3.4.4"
dns-lookup = "2.0.4"
hex = "0.4.3"
int-enum = "1.1.1"
libc = "0.2.153"
serde = "1.0.202"
serde_derive = "1.0.202"
serde_json = { version = "1.0.117" }
serde_with = "3.8.1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Networking_WinSock",
    "Win32_System_IO",
    "Win32_System_Diagnostics_Debug",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Globalization",
]

[features]
default = ["iphelper"]
iphelper = []
skip-network-tests = []
anyhow = ["dep:anyhow"]

[dev-dependencies]
lazy_static = "1.4.0"
